LIB-001: Migrate to Java 26 and Spring Boot 4