@@ -1,12 +1,7 @@
 package com.naskoni.library.exporter;
 
 import com.naskoni.library.exception.NotFoundException;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.FilenameUtils;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Component;
-
-import javax.annotation.PostConstruct;
+import jakarta.annotation.PostConstruct;
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
@@ -14,39 +9,48 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.io.FilenameUtils;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Component;
 
-/**
- * @author Atanas Atanasov
- * @version 1.0.0
- */
 @Slf4j
 @Component
 public class ExporterFactory {
 
   private static final String PACKAGE_NAME = "com.naskoni.library.exporter.";
-  private Map<String, Class<? extends Exporter>> classMap = new HashMap<>();
+
+  private final Map<String, Class<? extends Exporter>> classMap = new HashMap<>();
+
   private URLClassLoader loader;
 
   @Value("${dir.classes}")
   private String pluginPath;
 
   /**
-   * Creates a {@link Exporter} child instance for the specified type.
+   * Creates an {@link Exporter} instance for the specified type.
    *
-   * @param type the Exporter type value corresponding to one of Exporter children
-   * @return the Exporter child instance for the corresponding type
-   * @throws {@link NotFoundException} if the Exporter type is not supported
+   * @param type the exporter type
+   * @return the exporter instance
+   * @throws NotFoundException if the exporter type is not supported
    */
   public Exporter newInstance(String type) {
-    if (classMap.containsKey(type)) {
+    Class<? extends Exporter> exporterClass = classMap.get(type);
+
+    if (exporterClass != null) {
       try {
-        return classMap.get(type).getDeclaredConstructor().newInstance();
+        return exporterClass.getDeclaredConstructor().newInstance();
       } catch (InstantiationException
-          | IllegalAccessException
-          | NoSuchMethodException
-          | InvocationTargetException e) {
-        log.error(e.getMessage(), e);
+               | IllegalAccessException
+               | NoSuchMethodException
+               | InvocationTargetException e) {
+
+        log.error("Could not create exporter for type: {}", type, e);
       }
     }
 
@@ -63,45 +67,62 @@ public class ExporterFactory {
 
     File directory = new File(pluginPath);
     URI uri = directory.toURI();
+
     try {
       URL url = uri.toURL();
-      loader = URLClassLoader.newInstance(new URL[] {url});
+      loader = URLClassLoader.newInstance(new URL[]{url});
+
       try {
-        List<Class<? extends Exporter>> pluginClasses = getExporterClasses(directory);
+        List<Class<? extends Exporter>> pluginClasses =
+            getExporterClasses(directory);
+
         fillClassMap(pluginClasses);
       } finally {
         closeLoader();
       }
     } catch (MalformedURLException e) {
-      log.error(e.getMessage(), e);
+      log.error("Could not create URL for plugin directory: {}", pluginPath, e);
     }
   }
 
   private void fillMapWithDefaultExporterClasses() {
-    List<Class<? extends Exporter>> classes = new ArrayList<>(Arrays.asList(CsvFileExporter.class));
+    List<Class<? extends Exporter>> classes =
+        new ArrayList<>(List.of(CsvFileExporter.class));
+
     fillClassMap(classes);
   }
 
   private List<Class<? extends Exporter>> getExporterClasses(File directory) {
     List<Class<? extends Exporter>> classes = new ArrayList<>();
+
     if (directory.exists() && directory.isDirectory()) {
-      File[] files = directory.listFiles((d, n) -> n.endsWith("class"));
+
+      File[] files = directory.listFiles((dir, name) -> name.endsWith(".class"));
+
+      if (files == null) {
+        return classes;
+      }
+
       for (File file : files) {
         String className = FilenameUtils.removeExtension(file.getName());
+
         try {
           Class<?> clazz = loader.loadClass(PACKAGE_NAME + className);
+
           if (Exporter.class.isAssignableFrom(clazz)) {
             // This cast is correct because we have already proved it
             Class<Exporter> exporterClass = (Class<Exporter>) clazz;
             classes.add(exporterClass);
           }
+
         } catch (ClassNotFoundException e) {
-          log.error(e.getMessage(), e);
+          log.error("Could not load exporter class: {}", className, e);
         }
       }
+
     } else {
       log.warn(
-          "The provided directory for key <dir.classes> in <application.properties>: <{}> does not exist",
+          "The provided directory configured by <dir.classes> in <application.properties>: <{}> does not exist",
           pluginPath);
     }
 
@@ -111,22 +132,30 @@ public class ExporterFactory {
   private void fillClassMap(List<Class<? extends Exporter>> classes) {
     for (Class<? extends Exporter> clazz : classes) {
       try {
-        Exporter exporter = clazz.getDeclaredConstructor().newInstance();
+        Exporter exporter =
+            clazz.getDeclaredConstructor().newInstance();
+
         classMap.put(exporter.getType(), clazz);
+
       } catch (InstantiationException
-          | IllegalAccessException
-          | NoSuchMethodException
-          | InvocationTargetException e) {
-        log.error(e.getMessage(), e);
+               | IllegalAccessException
+               | NoSuchMethodException
+               | InvocationTargetException e) {
+
+        log.error("Could not instantiate exporter class: {}", clazz.getName(), e);
       }
     }
   }
 
   private void closeLoader() {
+    if (loader == null) {
+      return;
+    }
+
     try {
       loader.close();
     } catch (IOException e) {
-      log.error(e.getMessage(), e);
+      log.error("Could not close exporter class loader", e);
     }
   }
 }
